# genetic-algorithm-tutorial

./: .gitignore  DETAILES_CROSSOVER_MUTATION.md  DETAILES_CROSSOVER_MUTATION_old.md  INTRODUCTION.md  INTRODUCTION_OLD.md  README.md  README_old.md  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: devcontainer.json
docs/: crossover.md  index.md  mutation.md
examples/: demo_root.py  demo_root_1d.py  demo_root_1d_sa.py  demo_root_2d.py  demo_root_old.py  demo_rvx_opt.py
src/genalgo/: __init__.py  crossover.py  mutation.py  population.py  selection.py  selectors.py
src/rootfinder/: cli.py  fitness.py  search.py
tests/: test_crossover.py  test_mutation.py  test_population.py  test_rootfinder.py  test_selection.py
